# smart-quantization

./: .gitignore  README.md  d.csv  pyproject.toml  scratch.py  test.py  train.py
.devcontainer/: devcontainer.json
hw/: smaq-with-bn.cpp  smaq.cpp
libbdi/: Cargo.toml
libbdi/bdi-python/: Cargo.toml
libbdi/bdi-python/src/: lib.rs
libbdi/src/: lib.rs  main.rs
scripts/: analyze-feb5.py  analyze-feb9.py  data.csv  get-compression-ratios.ps1  get-data.py  get-size-bert.py  get-size.py  graph-resnet-weights.py  rename_feb5.ps1  run-bert-imdb.sh  run-bert.sh  run-inception.sh  run-new.sh  run-resnet.sh  run.ps1  run.sh  tensorboard-extract-graph.py  tensorboard-extract-table.py  tensorboard-extract.py  train-bert-imdb.ps1  train-bert.ps1  train-featuremap.sh  train-featuremaponly.ps1  train-inception.ps1  train-resnet-new.ps1  train-resnet.ps1  train.ps1  train.sh
smart_compress/compress/: base.py  bf16.py  fp16.py  fp32.py  fp8.py  s2fp8.py  smart.py
smart_compress/data/: cifar10.py  cifar100.py  cifar_base.py  glue.py  imdb.py  tiny_imagenet.py
smart_compress/models/: base.py  bert.py  inception.py  resnet.py
smart_compress/models/pytorch/: inception.py  resnet.py
smart_compress/util/: compression.py  enum.py  globals.py  pytorch_hooks.py  train.py
smart_compress/util/pytorch/: autograd.py  hooks.py  optimizer.py  quantization.py
