[tool.poetry]
name = "smart-compress"
version = "0.1.0"
description = ""
authors = ["Nima Shoghi <nimashoghi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytorch-lightning = {version = "^1.1.0"}
qtorch = "^0.2.0"
datasets = "^1.1.3"
torch = "1.7.0"
tqdm = ">=4.41.0"
transformers = "^4.0.1"
argparse-utils = "^1.3.0"
scipy = "^1.5.4"
sklearn = "^0.0"
test-tube = "^0.7.5"

[tool.poetry.dev-dependencies]
seaborn = "^0.11.1"
tensorboard = "^2.5.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
