[tool.poetry]
name = "smart-compress"
version = "0.1.0"
description = ""
authors = ["Nima Shoghi <nimashoghi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytorch-lightning = {version = "^1.4.0"}
qtorch = "^0.2.0"
datasets = "^1.11.0"
torch = "*"
tqdm = ">=4.62.0"
transformers = "^4.9.1"
argparse-utils = "^1.3.0"
test-tube = "^0.7.5"
jsonargparse = {extras = ["signatures"], version = "^3.17.0"}
torchvision = "^0.10.0"

[tool.poetry.dev-dependencies]
seaborn = "^0.11.1"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
